[package]
name = "auto-sensitivity"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Wenger"]
license = " GPL-3.0-only"
description = "A tool to have multiple sensitivity per pointer device on X11"
readme = "../README.md"
homepage = "https://github.com/owngr/autosensitivity"
repository = "https://github.com/owngr/autosensitivity"
keywords = ["cli",]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for parsing command line argument
clap = { version = "4.0", features = ["derive"] }
home = "0.5.5"
